--- a/charts/argo-rollouts/templates/controller/deployment.yaml
+++ b/charts/argo-rollouts/templates/controller/deployment.yaml
@@ -78,8 +78,8 @@ spec:
           {{- toYaml .Values.controller.readinessProbe | nindent 10 }}
         securityContext:
           {{- toYaml .Values.containerSecurityContext | nindent 10 }}
-        {{- if .Values.controller.lifecycle }}
-        lifecycle: {{ toYaml .Values.controller.lifecycle | nindent 10 }}
+        {{- with .Values.controller.lifecycle }}
+        lifecycle: {{ toYaml . | nindent 10 }}
         {{- end }}
         resources:
           {{- toYaml .Values.controller.resources | nindent 10 }}
