feat(argo-rollouts): Add lifecyle and terminationGracePeriodSeconds settings for controller (#3100)
* feat(argo-rollouts): Add lifecyle and terminationGracePeriodSeconds settings for controller

Signed-off-by: AviorSchreiber <80765239+AviorSchreiber@users.noreply.github.com>

* Update charts/argo-rollouts/templates/controller/deployment.yaml

Co-authored-by: Aikawa <yu.croco@gmail.com>
Signed-off-by: AviorSchreiber <80765239+AviorSchreiber@users.noreply.github.com>

* Update charts/argo-rollouts/templates/controller/deployment.yaml

Co-authored-by: JM (Jason Meridth) <jmeridth@gmail.com>
Signed-off-by: AviorSchreiber <80765239+AviorSchreiber@users.noreply.github.com>

---------

Signed-off-by: AviorSchreiber <80765239+AviorSchreiber@users.noreply.github.com>
Co-authored-by: Aikawa <yu.croco@gmail.com>
Co-authored-by: JM (Jason Meridth) <jmeridth@gmail.com>

--- a/charts/argo-rollouts/templates/controller/deployment.yaml
+++ b/charts/argo-rollouts/templates/controller/deployment.yaml
@@ -78,6 +78,9 @@ spec:
           {{- toYaml .Values.controller.readinessProbe | nindent 10 }}
         securityContext:
           {{- toYaml .Values.containerSecurityContext | nindent 10 }}
+        {{- with .Values.controller.lifecycle }}
+        lifecycle: {{ toYaml . | nindent 10 }}
+        {{- end }}
         resources:
           {{- toYaml .Values.controller.resources | nindent 10 }}
         volumeMounts:
@@ -101,6 +104,9 @@ spec:
       {{- end }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      {{- with .Values.controller.terminationGracePeriodSeconds }}
+      terminationGracePeriodSeconds: {{ . }}
+      {{- end }}
       {{- if .Values.controller.tolerations }}
       tolerations:
         {{- toYaml .Values.controller.tolerations | nindent 8 }}
