--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -812,6 +812,9 @@ artifactRepository:
     # secretKeySecret:
     #   name: "{{ .Release.Name }}-minio"
     #   key: secretkey
+    # sessionTokenSecret:
+    #   name: "{{ .Release.Name }}-minio"
+    #   key: sessionToken
     # # insecure will disable TLS. Primarily used for minio installs not configured with TLS
     # insecure: false
     # caSecret:
