chore(github): Support redis-exporter to Renovate
Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/renovate.json
+++ b/renovate.json
@@ -102,6 +102,13 @@
       "enabled": false
     },
     {
+      "matchPackagePatterns": ["public.ecr.aws/bitnami/redis-exporter"],
+      "commitMessagePrefix": "chore({{{replace 'public.ecr.aws/' '' depName}}}):",
+      "postUpgradeTasks": {
+        "commands": ["./scripts/renovate-bump-version.sh {{depName}}"]
+      }
+    },
+    {
       "matchPackageNames": ["ghcr.io/renovatebot/renovate"],
       "extends": ["schedule:monthly"]
     }
