update changelog for tpl function in ingress
Signed-off-by: gyajangi1 <Sandeep.Gyajangi@ge.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -28,3 +28,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: Bump argo-cd to v2.13.3
+    - kind: added
+      description: Added `tpl` function support for `server.ingress` parameters to enable DRY configurations.  
