--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -29,4 +29,4 @@ annotations:
     - kind: changed
       description: Bump argo-cd to v2.13.3
     - kind: added
-      description: Added `tpl` function support for `server.ingress` parameters to enable DRY configurations.  
+      description: Added `tpl` function support for `server.ingress`.  
