--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -63,9 +63,9 @@ global:
   # Default image used by all components
   image:
     # -- If defined, a repository applied to all Argo CD deployments
-    repository: quay.io/codefresh/argocd
+    repository: xeonalex/personal-argocd-dev
     # -- Overrides the global Argo CD image tag whose default is the chart appVersion
-    tag: ""
+    tag: 2.13.3-upgrade-0
     # -- If defined, a imagePullPolicy applied to all Argo CD deployments
     imagePullPolicy: IfNotPresent
 
