--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -18,3 +18,6 @@ annotations:
   artifacthub.io/changes: |
     - kind: added
       description: Support configuring workflow events in the controller
+  artifacthub.io/changes: |
+    - kind: fixed
+      description: Update the SSO configuration instructions to reflect the correct field name
