--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -402,6 +402,12 @@ controller:
     ## "Unable to create audit event: etcdserver: mvcc: database space exceeded"
     enabled: true
 
+  workflowEvents:
+    # -- Enable to emit events on workflow status changes.
+    ## This can take up a lot of space in k8s (typically etcd), resulting in errors when trying to create new events:
+    ## "Unable to create audit event: etcdserver: mvcc: database space exceeded"
+    enabled: true
+
   # -- Configure when workflow controller runs in a different k8s cluster with the workflow workloads,
   # or needs to communicate with the k8s apiserver using an out-of-cluster kubeconfig secret.
   # @default -- `{}` (See [values.yaml])
