--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-appVersion: v2.13.3-2025.1.9-67d01f9e0
+appVersion: v2.13.3-2025.1.15-9f3c74c06
 kubeVersion: ">=1.25.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 7.7.14-0-cap-2.13.3-2025.1.9-67d01f9e0
+version: 7.7.14-1-cap-2.13.3-2025.1.15-9f3c74c06
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: changed
-      description: Bump argo-cd to v2.13.3-2025.1.9-67d01f9e0 and base helm chart 7.7.14
+      description: Bump argo-cd to v2.13.3-2025.1.15-9f3c74c06 for CR-26732-bump-x-crypto
