--- a/charts/argocd-image-updater/templates/secret.yaml
+++ b/charts/argocd-image-updater/templates/secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "argocd-image-updater.fullname" . }}-secret
+  name: {{ .Values.config.argocd.tokenSecretName }}
   namespace: {{ include "argocd-image-updater.namespace" . | quote }}
   labels:
     {{- include "argocd-image-updater.labels" . | nindent 4 }}
