--- a/scripts/release-analysis/Dockerfile
+++ b/scripts/release-analysis/Dockerfile
@@ -5,4 +5,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY main.py fetch_releases.py fetch_helmet_releases.py merge_csvs.py plot_graph.py ./
 RUN chmod +x main.py fetch_releases.py fetch_helmet_releases.py merge_csvs.py plot_graph.py
-CMD [ "python", "./main.py" ]
+CMD [ "python", "-u", "./main.py" ]
