--- a/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
+++ b/charts/argo-cd/templates/argocd-configs/cluster-secrets.yaml
@@ -22,7 +22,7 @@ stringData:
   {{- if $cluster_value.shard }}
   shard: {{ $cluster_value.shard | quote }}
   {{- end }}
-  name: {{ default $cluster_key $cluster_value.name }}
+  name: {{ $cluster_key }}
   server: {{ required "A valid .Values.configs.clusterCredentials.CLUSTERNAME.server entry is required!" $cluster_value.server }}
   {{- if $cluster_value.namespaces }}
   namespaces: {{ $cluster_value.namespaces }}
