feat(argocd-image-updater): Make cm and secret names configurable (#2998)
* feat: made argocd image updater cm and secret name templated

Signed-off-by: AvivGuiser <avivguiser@gmail.com>

* fix indention

Signed-off-by: AvivGuiser <avivguiser@gmail.com>

* update Chart.yaml

Signed-off-by: AvivGuiser <avivguiser@gmail.com>

* chore: Apply changes from code review

Signed-off-by: Marco Maurer <mkilchhofer@users.noreply.github.com>

* chore: Reflect changes from review inside changelog

Signed-off-by: Marco Maurer (-Kilchhofer) <mkilchhofer@users.noreply.github.com>

---------

Signed-off-by: AvivGuiser <avivguiser@gmail.com>
Signed-off-by: Marco Maurer <mkilchhofer@users.noreply.github.com>
Signed-off-by: Marco Maurer (-Kilchhofer) <mkilchhofer@users.noreply.github.com>
Co-authored-by: Marco Maurer <mkilchhofer@users.noreply.github.com>

--- a/charts/argocd-image-updater/templates/configmap-authscripts.yaml
+++ b/charts/argocd-image-updater/templates/configmap-authscripts.yaml
@@ -4,7 +4,7 @@ kind: ConfigMap
 metadata:
   labels:
     {{- include "argocd-image-updater.labels" . | nindent 4 }}
-  name: argocd-image-updater-authscripts
+  name: {{ .Values.authScripts.name }}
   namespace: {{ include "argocd-image-updater.namespace" . | quote }}
 data:
   {{- toYaml .Values.authScripts.scripts | nindent 2}}
