Add alpha label to comment of sa sync impersonation
Co-authored-by: Aikawa <yu.croco@gmail.com>
Signed-off-by: Nick Heijmink <75807895+Nheijmink19@users.noreply.github.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -175,7 +175,7 @@ configs:
     # -- The name of tracking label used by Argo CD for resource pruning
     application.instanceLabelKey: argocd.argoproj.io/instance
 
-    # -- Enable control of the service account used for the sync operation
+    # -- Enable control of the service account used for the sync operation (alpha)
     ## Ref: https://argo-cd.readthedocs.io/en/stable/operator-manual/app-sync-using-impersonation/
     application.sync.impersonation.enabled: "false"
 
