--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -177,7 +177,7 @@ configs:
 
     # -- Enable control of the service account used for the sync operation (alpha)
     ## Ref: https://argo-cd.readthedocs.io/en/stable/operator-manual/app-sync-using-impersonation/
-    application.sync.impersonation.enabled: "false"
+    application.sync.impersonation.enabled: false
 
     # -- Enable logs RBAC enforcement
     ## Ref: https://argo-cd.readthedocs.io/en/latest/operator-manual/upgrading/2.3-2.4/#enable-logs-rbac-enforcement
