--- a/renovate.json
+++ b/renovate.json
@@ -86,11 +86,12 @@
         "argoproj/argo-rollouts",
         "argoproj-labs/argocd-image-updater",
         "argoprojlabs/argocd-extension-installer",
-        "public.ecr.aws/bitnami/redis-exporter"
+        "public.ecr.aws/bitnami/redis-exporter",
+        "public.ecr.aws/docker/library/redis"
       ],
       "commitMessagePrefix": "chore({{parentDir}}):",
       "postUpgradeTasks": {
-        "commands": ["./scripts/renovate-bump-version.sh -c {{parentDir}} -d {{ depName }} -v {{newVersion}}"]
+        "commands": ["./scripts/renovate-bump-version.sh -c {{parentDir}} -d {{depName}} -v {{newVersion}}"]
       }
     },
     {
