chore: Also run helm-docs
Signed-off-by: Marco Maurer <mkilchhofer@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -91,7 +91,10 @@
       ],
       "commitMessagePrefix": "chore({{parentDir}}):",
       "postUpgradeTasks": {
-        "commands": ["./scripts/renovate-bump-version.sh -c {{parentDir}} -d {{depName}} -v {{newVersion}}"]
+        "commands": [
+          "./scripts/renovate-bump-version.sh -c {{parentDir}} -d {{depName}} -v {{newVersion}}",
+          "./scripts/helm-docs.sh"
+        ]
       }
     },
     {
