chore: Try to use helm-docs via "go install"
Signed-off-by: Marco Maurer <mkilchhofer@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -93,7 +93,8 @@
       "postUpgradeTasks": {
         "commands": [
           "./scripts/renovate-bump-version.sh -c {{parentDir}} -d {{depName}} -v {{newVersion}}",
-          "./scripts/helm-docs.sh"
+          "go install github.com/norwoodj/helm-docs/cmd/helm-docs@v1.9.1",
+          "helm-docs"
         ]
       }
     },
