--- a/charts/argo-cd/templates/argocd-commit-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-commit-server/deployment.yaml
@@ -132,6 +132,8 @@ spec:
           failureThreshold: {{ .Values.commitServer.readinessProbe.failureThreshold }}
           timeoutSeconds: {{ .Values.commitServer.readinessProbe.timeoutSeconds }}
         {{- end }}
+        resources:
+          {{- toYaml .Values.commitServer.resources | nindent 10 }}
         {{- with .Values.commitServer.containerSecurityContext }}
         securityContext:
           {{- toYaml . | nindent 10 }}
@@ -160,15 +162,12 @@ spec:
         - /var/run/argocd/argocd-cmp-server
         image: {{ default .Values.global.image.repository .Values.commitServer.image.repository }}:{{ default (include "argo-cd.defaultTag" .) .Values.commitServer.image.tag }}
         name: copyutil
+        resources:
+          {{- toYaml .Values.commitServer.resources | nindent 10 }}
+        {{- with .Values.commitServer.containerSecurityContext }}
         securityContext:
-          runAsNonRoot: true
-          readOnlyRootFilesystem: true
-          allowPrivilegeEscalation: false
-          capabilities:
-            drop:
-            - ALL
-          seccompProfile:
-            type: RuntimeDefault
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
         volumeMounts:
         - mountPath: /var/run/argocd
           name: var-files
