--- a/charts/argo-cd/templates/argocd-commit-server/serviceaccount.yaml
+++ b/charts/argo-cd/templates/argocd-commit-server/serviceaccount.yaml
@@ -1,6 +1,7 @@
-{{- if .Values.commitServer.serviceAccount.create }}
+{{- if and .Values.commitServer.enabled .Values.commitServer.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
+automountServiceAccountToken: {{ .Values.commitServer.serviceAccount.automountServiceAccountToken }}
 metadata:
   name: {{ include "argo-cd.commitServer.serviceAccountName" . }}
   namespace: {{ include  "argo-cd.namespace" . }}
