--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -3752,6 +3752,9 @@ notifications:
     #   - on-sync-status-unknown
 
 commitServer:
+  # -- Enable commit server
+  enabled: true
+
   # -- Commit server name
   name: commit-server
 
