--- a/charts/argo-cd/templates/argocd-commit-server/networkpolicy.yaml
+++ b/charts/argo-cd/templates/argocd-commit-server/networkpolicy.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.global.networkPolicy.create }}
+{{- if and .Values.commitServer.enabled .Values.global.networkPolicy.create }}
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
