--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -3790,6 +3790,12 @@ commitServer:
     # - secretRef:
     #     name: secret-name
 
+  # -- List of extra mounts to add (normally used with extraVolumes)
+  extraVolumeMounts: []
+
+  # -- List of extra volumes to add
+  extraVolumes: []
+
   ## commit server service configuration
   service:
     # -- commit server service annotations
