chore: Disable commit-server by default
Signed-off-by: Marco Maurer <mkilchhofer@users.noreply.github.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -3753,7 +3753,7 @@ notifications:
 
 commitServer:
   # -- Enable commit server
-  enabled: true
+  enabled: false
 
   # -- Commit server name
   name: commit-server
