--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -3755,6 +3755,7 @@ notifications:
 
 eventReporter:
   name: event-reporter
+  enabled: true
   ## Amount of replicas for event reporting sharding
   replicas: 3
   ## Event reporter Pod Disruption Budget
