Added option to disable the HTTPS service port (GKE)
Signed-off-by: Marijn Blom <marijn@mainblades.com>
Signed-off-by: MarijnB <marijn@mainblades.com>

--- a/charts/argo-cd/templates/argocd-server/service.yaml
+++ b/charts/argo-cd/templates/argocd-server/service.yaml
@@ -44,6 +44,7 @@ spec:
     {{- if eq .Values.server.service.type "NodePort" }}
     nodePort: {{ .Values.server.service.nodePortHttp }}
     {{- end }}
+  {{- if .Values.server.service.servicePortHttpsEnabled }}
   - name: {{ .Values.server.service.servicePortHttpsName }}
     protocol: TCP
     port: {{ .Values.server.service.servicePortHttps }}
@@ -56,4 +57,4 @@ spec:
     {{- end }}
   selector:
     {{- include "argo-cd.selectorLabels" (dict "context" . "name" .Values.server.name) | nindent 4 }}
-
+  {{- end }}
