add information to the changelog
Signed-off-by: Yorick <yorickdevries@live.com>

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -18,3 +18,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: added
       description: Support additional rules for service account that runs workflows
+    - kind: added
+      description: Added access to see pod information
