remove old changes

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -17,6 +17,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: added
-      description: Support additional rules for service account that runs workflows
-    - kind: added
-      description: Added access to see pod information
+      description: Added access to see pod information in argo-workflows
