add: webhook & controller revisionHistoryLimit to values.yaml
Signed-off-by: Martin Bouillaud <mbouillaud@lefigaro.fr>
Signed-off-by: Martin Bouillaud <contact@bouillaudmartin.fr>

--- a/charts/argo-events/values.yaml
+++ b/charts/argo-events/values.yaml
@@ -201,6 +201,9 @@ controller:
     # @default -- `""` (defaults to global.image.imagePullPolicy)
     imagePullPolicy: ""
 
+  # -- The number of replicasets history to keep
+  revisionHistoryLimit: 5
+
   # -- The number of events controller pods to run.
   replicas: 1
 
@@ -362,6 +365,9 @@ webhook:
     # -- Image pull policy for the event controller
     # @default -- `""` (defaults to global.image.imagePullPolicy)
     imagePullPolicy: ""
+
+  # -- The number of replicasets history to keep
+  revisionHistoryLimit: 5
 
   # -- The number of webhook pods to run.
   replicas: 1
